# nectar

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
docker/: Dockerfile.server  Dockerfile.transcoder  Dockerfile.web  docker-compose.yml  nginx.conf
proto/: Cargo.toml
proto/src/: lib.rs
server/: Cargo.toml
server/migrations/: 001_initial.sql  002_core_infrastructure.sql  003_fulltext_search.sql  004_media_streams.sql  005_images.sql  006_people_genres_studios.sql  007_external_ids.sql  008_media_item_additions.sql  009_user_auth_preferences.sql  010_watch_history_collections.sql  011_jobs_and_scans.sql  012_pgvector_hnsw.sql  013_scale_indexes.sql
server/src/: auth.rs  config.rs  db.rs  main.rs  media.rs  models.rs  services.rs
server/src/api/: auth.rs  errors.rs  extractors.rs  libraries.rs  media.rs  mod.rs  search.rs  streaming.rs  users.rs
server/src/media/: ffprobe.rs  metadata.rs  scanner.rs
server/src/services/: embeddings.rs  transcoding.rs
transcoder/: Cargo.toml
transcoder/src/: config.rs  ffmpeg.rs  hardware.rs  main.rs  worker.rs
transcoder/src/ffmpeg/: encoder.rs  filters.rs  mod.rs  progress.rs
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  styles.css  types.ts
web/src/components/: CastRow.module.css  CastRow.tsx  ContinueWatching.module.css  ContinueWatching.tsx  EpisodeList.module.css  EpisodeList.tsx  Layout.module.css  Layout.tsx  LibraryRow.module.css  LibraryRow.tsx  MediaCard.module.css  MediaCard.tsx  MediaGrid.module.css  MediaGrid.tsx  PlayerControls.module.css  PlayerControls.tsx  SearchBar.module.css  SearchBar.tsx  SubtitleSelector.module.css  SubtitleSelector.tsx  VideoPlayer.tsx
web/src/lib/: api.ts
web/src/pages/: Detail.module.css  Detail.tsx  Home.module.css  Home.tsx  Library.module.css  Library.tsx  Login.module.css  Login.tsx  Player.module.css  Player.tsx  Search.module.css  Search.tsx  Settings.module.css  Settings.tsx
web/src/stores/: auth.tsx
