[workspace]
resolver = "2"
members = ["server", "transcoder", "proto"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Gumbees/nectar"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-nats = "0.38"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }
thiserror = "2"
anyhow = "1"
config = "0.15"
dotenvy = "0.15"
argon2 = "0.5"
jsonwebtoken = "9"
openidconnect = { version = "4", features = ["reqwest-blocking"] }
reqwest = { version = "0.12", features = ["json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
rand = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
nectar-proto = { path = "proto" }
