[package]
name = "nectar-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-nats.workspace = true
tower.workspace = true
tower-http.workspace = true
thiserror.workspace = true
anyhow.workspace = true
config.workspace = true
dotenvy.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
openidconnect.workspace = true
reqwest.workspace = true
axum-extra.workspace = true
rand.workspace = true
tokio-util.workspace = true
nectar-proto.workspace = true
